src/test/ui/nll/match-guards-always-borrow.ast.nll.stderr
error[E0507]: cannot move out of borrowed content
  --> $DIR/match-guards-always-borrow.rs:23:13
   |
LL |             (|| { let bar = foo; bar.take() })();
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ cannot move out of borrowed content

error: aborting due to previous error

For more information about this error, try `rustc --explain E0507`.
